# Solsniper

./: Anchor.toml  README.md  test-battle.js
agents/: equity-agent.ts  run-battle.ts  simple-agent.ts
app/: index.html
programs/agent-poker/: Cargo.toml
programs/agent-poker/src/: lib.rs
sdk/src/: index.ts  poker-engine.ts
server/: package-lock.json  package.json  test-quick.js  tsconfig.json
server/src/: coordinator.ts  index.ts
